--- a/account/createUser/signup.html
+++ b/account/createUser/signup.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div >
     <h2>User Profile</h2>
-    <form action="submitProfile.php" method="POST" enctype="multipart/form-data">
+    <form action="#" method="POST" enctype="multipart/form-data">
         <div>
             <label for="firstName">First Name:</label>
             <input type="text" id="firstName" name="firstName" required>
